[package]
name = "workflowy-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = ""
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/workflowy-api"
repository = "https://github.com/DenisGorbachev/workflowy-api"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
title = ""
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
errgonomic = "0.5.1"
governor = "0.10.4"
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
subtype = { git = "https://github.com/DenisGorbachev/subtype", version = "0.1.0" }
thiserror = "2.0.18"
timestamp-please = { version = "0.2.0", features = ["serde"] }
url = "2.5.8"
url-macro = "0.2.3"

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
#derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
#derive-new = "0.7.0"
#derive_more = { version = "2.1.1", features = ["full"] }
#errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
#itertools = "0.14.0"
#standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
#strum = { version = "0.27.2", features = ["derive"] }
#stub-macro = { version = "0.2.1" }
#subtype = { git = "https://github.com/DenisGorbachev/subtype" }
